[workspace]
resolver = "2"
members = [
    "rmqtt",
    "rmqtt-plugins/*",
    "rmqtt-bin",
    "rmqtt-macros"
]

[patch.crates-io]
rmqtt = { path = "rmqtt" }
rmqtt-macros = { path = "rmqtt-macros" }
rmqtt-plugin-template = { path = "rmqtt-plugins/rmqtt-plugin-template" }
rmqtt-acl = { path = "rmqtt-plugins/rmqtt-acl" }
rmqtt-web-hook = { path = "rmqtt-plugins/rmqtt-web-hook" }
rmqtt-auth-http = { path = "rmqtt-plugins/rmqtt-auth-http" }
rmqtt-auth-jwt = { path = "rmqtt-plugins/rmqtt-auth-jwt" }
rmqtt-cluster-broadcast = { path = "rmqtt-plugins/rmqtt-cluster-broadcast" }
rmqtt-cluster-raft = { path = "rmqtt-plugins/rmqtt-cluster-raft" }
rmqtt-counter = { path = "rmqtt-plugins/rmqtt-counter" }
rmqtt-http-api = { path = "rmqtt-plugins/rmqtt-http-api" }
rmqtt-retainer = { path = "rmqtt-plugins/rmqtt-retainer" }
rmqtt-sys-topic = { path = "rmqtt-plugins/rmqtt-sys-topic" }
rmqtt-session-storage = { path = "rmqtt-plugins/rmqtt-session-storage" }
rmqtt-message-storage = { path = "rmqtt-plugins/rmqtt-message-storage" }
rmqtt-topic-rewrite = { path = "rmqtt-plugins/rmqtt-topic-rewrite" }
rmqtt-auto-subscription = { path = "rmqtt-plugins/rmqtt-auto-subscription"}
rmqtt-bridge-ingress-mqtt = { path = "rmqtt-plugins/rmqtt-bridge-ingress-mqtt" }
rmqtt-bridge-egress-mqtt = { path = "rmqtt-plugins/rmqtt-bridge-egress-mqtt" }
rmqtt-bridge-ingress-kafka = { path = "rmqtt-plugins/rmqtt-bridge-ingress-kafka" }
rmqtt-bridge-egress-kafka = { path = "rmqtt-plugins/rmqtt-bridge-egress-kafka" }
rmqtt-bridge-ingress-pulsar = { path = "rmqtt-plugins/rmqtt-bridge-ingress-pulsar"}
rmqtt-bridge-egress-pulsar = { path = "rmqtt-plugins/rmqtt-bridge-egress-pulsar"}
rmqtt-bridge-egress-nats = { path = "rmqtt-plugins/rmqtt-bridge-egress-nats"}
rmqtt-bridge-egress-reductstore = { path = "rmqtt-plugins/rmqtt-bridge-egress-reductstore"}

[workspace.package]
version = "0.13.1"
edition = "2021"
authors = ["rmqtt <rmqttd@126.com>"]
description = "MQTT Server for v3.1, v3.1.1 and v5.0 protocols"
repository = "https://github.com/rmqtt/rmqtt.git"
license = "MIT license, Apache-2.0 License"
categories = ["network-programming"]
keywords = ["MQTT", "IoT", "messaging", "MQTT-Server", "MQTT-Broker"]
exclude = [".gitignore", ".cargo/config"]
rust-version = "1.81.0"


[workspace.dependencies]
rmqtt = "0.13"
rmqtt-macros = "0.1"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
