[package]
name = "rmqttd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true
build = "build.rs"

[[bin]]
name = "rmqttd"
path = "src/server.rs"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"

[target.'cfg(not(windows))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }

[target.'cfg(windows)'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[dependencies]
rustls-pemfile = "=2"

##mqtt broker
rmqtt.workspace = true
##plugins
rmqtt-acl = "0.1"
rmqtt-web-hook = "0.1"
rmqtt-auth-http = "0.1"
rmqtt-auth-jwt = "0.1"
rmqtt-cluster-broadcast = "0.1"
rmqtt-cluster-raft = "0.1"
rmqtt-counter = "0.1"
rmqtt-http-api = "0.1"
rmqtt-retainer = "0.1"
rmqtt-sys-topic = "0.1"
rmqtt-session-storage = "0.1"
rmqtt-message-storage = "0.1"
rmqtt-topic-rewrite = "0.1"
rmqtt-bridge-ingress-mqtt = "0.1"
rmqtt-bridge-egress-mqtt = "0.1"
rmqtt-bridge-egress-kafka = "0.1"
rmqtt-bridge-ingress-kafka = "0.1"
rmqtt-bridge-egress-pulsar = "0.1"
rmqtt-bridge-ingress-pulsar = "0.1"
rmqtt-bridge-egress-nats = "0.1"
rmqtt-bridge-egress-reductstore = "0.1"
rmqtt-auto-subscription = "0.1"
rmqtt-plugin-template = "0.1"

[package.metadata.plugins]
rmqtt-acl = { default_startup = true }
rmqtt-http-api = { default_startup = true }
rmqtt-counter = { default_startup = true }
rmqtt-web-hook = { }
rmqtt-auth-http = { }
rmqtt-auth-jwt = { }
rmqtt-cluster-broadcast = { immutable = true }
rmqtt-cluster-raft = { immutable = true }
rmqtt-retainer = { }
rmqtt-sys-topic = { }
rmqtt-session-storage = { immutable = true }
rmqtt-message-storage = { immutable = true }
rmqtt-topic-rewrite = { }
rmqtt-bridge-ingress-mqtt = { }
rmqtt-bridge-egress-mqtt = { }
rmqtt-bridge-egress-kafka = { }
rmqtt-bridge-ingress-kafka = { }
rmqtt-bridge-egress-pulsar = { }
rmqtt-bridge-ingress-pulsar = { }
rmqtt-bridge-egress-nats = { }
rmqtt-bridge-egress-reductstore = { }
rmqtt-auto-subscription = { }
rmqtt-plugin-template = { }

[build-dependencies]
toml = "0.8"

