[package]
name = "rmqtt-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmqtt-net.workspace = true
#rmqtt-codec.workspace = true
#rmqtt-setup.workspace = true
#tokio = { workspace = true, features = ["full"] }
#futures.workspace = true
#log.workspace = true
#anyhow.workspace = true
#thiserror.workspace = true
#socket2.workspace = true
#async-trait.workspace = true
#rustls.workspace = true
#tokio-rustls.workspace = true
#rustls-pemfile.workspace = true
#tokio-tungstenite.workspace = true
#pin-project-lite.workspace = true
#bytes = { version = "1.9", features = ["serde"] }
#bytestring = { workspace = true, features = ["serde"] }
#nonzero_ext.workspace = true
#tokio-util = { workspace = true, features = ["codec"] }
#once_cell.workspace = true
#env_logger = "0.11"

#
#[target.'cfg(not(windows))'.dependencies]
#rustls = { workspace = true, features = ["aws-lc-rs", "logging", "std", "tls12"] }
#
#[target.'cfg(windows)'.dependencies]
#rustls = { workspace = true, features = ["ring", "logging", "std", "tls12"] }
