[package]
name = "rmqtt-codec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { workspace = true, features = ["codec"] }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true, features = ["serde"] }
bytestring = { workspace = true, features = ["serde"] }
thiserror.workspace = true
bitflags.workspace = true
log.workspace = true
nonzero_ext.workspace = true
chrono.workspace = true

[dev-dependencies]
test-case = "3.2"