[package]
name = "rmqtt-codec"
version = "0.2.0"
description = "MQTT protocol codec implementation with multi-version support and version negotiation"
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-codec"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmqtt-utils.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true, features = ["serde"] }
bytestring = { workspace = true, features = ["serde"] }
thiserror.workspace = true
bitflags.workspace = true
log.workspace = true
nonzero_ext.workspace = true
chrono.workspace = true

[dev-dependencies]
test-case = "3.2"