[package]
name = "rmqtt-conf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmqtt-codec.workspace = true
rmqtt-net.workspace = true
anyhow.workspace = true
chrono.workspace = true
config.workspace = true
once_cell.workspace = true
serde.workspace = true
log.workspace = true
serde_json.workspace = true
ahash.workspace = true
slog.workspace = true
structopt.workspace = true
bytestring.workspace = true


