[package]
name = "rmqtt-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
chrono = { workspace = true, features = ["clock"] }
serde_json.workspace = true
log.workspace = true
bytestring.workspace = true


