[package]
name = "rmqtt-utils"
version = "0.1.2"
description = "Essential utilities for RMQTT system operations."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-utils"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
chrono = { workspace = true, features = ["clock"] }
serde_json.workspace = true
log.workspace = true
bytestring = { workspace = true, features = ["serde"] }


