[package]
name = "rmqtt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

[lib]
name = "rmqtt"
path = "src/lib.rs"

[features]
default = []
debug = []

[dependencies]
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
ntex = { git = "https://github.com/rmqtt/ntex.git", branch = "0.4.1", features = ["rustls"] }
ntex-mqtt = { git = "https://github.com/rmqtt/ntex-mqtt", branch = "0.7.2" }
#ntex = { path = "../../ntex/ntex", features = ["rustls"]}
#ntex-mqtt = { path = "../../ntex-mqtt" }
futures = "0.3"
tokio = { version = "1.42", features = ["sync", "time", "macros", "rt", "rt-multi-thread", "fs"] }
socket2 = { version = "0.5", features = ["all"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
prost = "0.13"
once_cell = "=1.20.2"
dashmap = "=6.1.0"
ahash = "0.8"
bytes = { version = "1.9", features = ["serde"] }
bytestring = { version = "1.4", features = ["serde"] }
thiserror = "=1.0.69"
anyhow = "=1.0.94"
async-trait = "0.1"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "=1.11.0", features = ["v4"] }
rand = "0.8"
crossbeam = "0.8"
governor = "0.8"
config = { version = "0.14", default-features = false, features = ["toml"] }
log = { version = "0.4", features = ["std"] }
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"
slog-stdlog = "4.1"
slog-scope = "4.4"
base64 = "0.22"
bincode = "1.3"
url = { version = "=2.5.4", default-features = false }
systemstat = "0.2"
itertools = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rust-box = { version = "0.12", features = ["task-exec-queue", "task-exec-queue-rate", "std-ext", "dequemap", "stream-ext-leaky-bucket"] }
counter-rater = { package = "box-counter", version = "0.3", features = ["rate"] }
structopt = "0.3"
tokio-tungstenite = "0.26"
pin-project-lite = "0.2"
tokio-cron-scheduler = "0.13"
bitflags = "=2.6.0"
leaky-bucket = "=1.1.2"
scc = "=2.1.18"
get_size = { package = "get-size", version = "0.1", features = ["derive"] }
itoa = "=1.0.14"
prometheus = "0.13"
regex = "=1.11.1"
futures-time = "3.0"
backoff = { version = "0.4", features = ["futures", "tokio"] }
parking_lot = "0.12.3"

[target.'cfg(not(windows))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }

[target.'cfg(windows)'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }


[build-dependencies]
tonic-build = "0.12"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
